Fixed dark mode for reviews home page

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -1338,6 +1338,11 @@
     body.dark-mode {
         #reviews-1775 {
             background-color: rgba(0, 0, 0, 0.6);
+
+            .cs-title, .cs-name, .cs-item-text{
+                color: var(--bodyTextColorWhite);
+                transition: color .3s;
+            }
         }
     }
 }
